# Localization_nd0013_cd2693

Lesson_5_Creating_Scan_Matching_Algorithms/Exercise-Intro-to-ICP/: helper.h  icp1-main.cpp
Lesson_6_Utilizing_Scan_Matching/Exercise-ICP-Alignment/: CMakeLists.txt  helper.cpp  helper.h  sm1-main.cpp
Lesson_6_Utilizing_Scan_Matching/Exercise-NDT-Alignment/: sm2-main.cpp
Lesson_7_Project_Scan_Matching_Localization/c3-project/: c3-main.cpp
